[package]
name = "bsp"
version = "0.1.0"
edition = "2024"

[dependencies]
assign-resources = "0.4.1"
cortex-m-rt = "0.7.5"
embassy-executor = { version = "0.7.0", features = ["task-arena-size-98304", "arch-cortex-m", "executor-thread", "executor-interrupt"] }
embassy-rp = { version = "0.4.0", features = ["unstable-pac", "time-driver", "critical-section-impl", "rp2040"] }
embassy-time = "0.4.0"
panic-halt = "1.0.0"