[package]
name = "i2s_stereo_in"
version = "0.1.0"
edition = "2024"

[dependencies]
cortex-m-rt = "0.7.5"
embassy-executor = { version = "0.7.0", features = ["task-arena-size-98304", "arch-cortex-m", "executor-thread", "executor-interrupt"] }
embassy-rp = { version = "0.4.0", features = ["unstable-pac", "time-driver", "critical-section-impl", "rp2040"] }
fixed-macro = "1.2.0"
panic-halt = "1.0.0"
portable-atomic = { version = "1.11.0", features = ["critical-section"] }
static_cell = "2.1.0"
